--- a/src/pages/wild-chess-simulator/index.astro
+++ b/src/pages/wild-chess-simulator/index.astro
@@ -1,6 +1,3 @@
 <script is:inline>
-    // Redirect your homepage to the first page of documentation.
-    // If you have a landing page, remove this script and add it here!
-    console.log("Index Redirection");
-    window.location.pathname = `/wild-chess-simulator/en/introduction/welcome`;
+    window.location.href = "/wild-chess-simulator/introduction/welcome";
 </script>
