--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,7 +27,7 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
     <HeadCommon />
     <HeadSEO {...data} canonicalUrl={canonicalURL} />
     <title>
-      {`${data.title} 🚀 ${SITE.title}`}
+      {`${topTitle} 🚀 ${SITE.title}`}
     </title>
 
     <style>
