--- a/src/pages/wild-chess-simulator/introduction/project-idea.astro
+++ b/src/pages/wild-chess-simulator/introduction/project-idea.astro
@@ -1,5 +1,5 @@
 ---
-import { Content as IdeaPost } from "../../post/introduction/project-idea.mdx";
+import { Content as IdeaPost } from "../../../content/introduction/project-idea.mdx";
 import MainLayout from "../../../layouts/MainLayout.astro";
 ---
 
