--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -1,29 +1,19 @@
 ---
 import MainLayout from "../../../layouts/MainLayout.astro";
-import { Content as RoadmapPost } from "../../post/introduction/roadmap.mdx";
+import { Content as RoadmapPost } from "../../../content/introduction/roadmap.mdx";
 import PageTimelineRoadmap from "../../../components/PageContent/PageTimelineRoadmap.astro";
 
 export let futureRoadmapElements = [
 	{
-		titleText: "Data Structure",
+		titleText: "Healer Skill Set",
 		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.04.2023",
+		dateText: "10.06.2023",
 	},
 	{
-		titleText: "Data Structure",
+		titleText: "Code Refactor",
 		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.04.2023",
-	},
-	{
-		titleText: "Data Structure",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.04.2023",
-	},
-	{
-		titleText: "Data Structure",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.04.2023",
-	},
+		dateText: "10.05.2023",
+	}
 ];
 ---
 
