--- a/src/pages/wild-chess-simulator/introduction/welcome.astro
+++ b/src/pages/wild-chess-simulator/introduction/welcome.astro
@@ -1,5 +1,5 @@
 ---
-import { Content as WelcomePost } from "../../post/introduction/welcome.mdx";
+import { Content as WelcomePost } from "../../../content/introduction/welcome.mdx";
 import MainLayout from "../../../layouts/MainLayout.astro";
 ---
 
