--- a/src/components/PageContent/PageTimelineRoadmap.astro
+++ b/src/components/PageContent/PageTimelineRoadmap.astro
@@ -20,13 +20,13 @@ let { futureTimelineElements } = Astro.props;
 				classCounter++;
 				return (
 					<div class={classCounter % 2 === 0 ? "row row-2" : "row row-1"}>
-						<section>
+						<section class="future">
 							<i class="icon fas fa-globe-dark" />
 							<div class="details">
 								<a class="title">{child.titleText}</a>
 								<span>{child.dateText} </span>
 							</div>
-							<p>{child.descText}</p>
+							<!-- <p>{child.descText}</p> -->
 						</section>
 					</div>
 				);
@@ -39,13 +39,13 @@ let { futureTimelineElements } = Astro.props;
 				classCounter++;
 				return (
 					<div class={classCounter % 2 === 0 ? "row row-2" : "row row-1"}>
-						<section>
+						<section class="past">
 							<i class="icon fas fa-globe" />
 							<div class="details">
-								<a class="title">{child.titleText}</a>
+								<a href={"../devlog/"+child.titleText.toLowerCase().split(' ').join('-')} class="title">{child.titleText}</a>
 								<span>{child.dateText}</span>
 							</div>
-							<p>{child.descText}</p>
+							<!-- <p>{child.descText}</p> -->
 						</section>
 					</div>
 				);
@@ -63,11 +63,10 @@ let { futureTimelineElements } = Astro.props;
 	}
 	.timeline-roadmap-container .center-line {
 		position: absolute;
-		height: 75%;
+		height: 100%;
 		width: 4px;
 		background: var(--theme-text-accent);
 		left: 50%;
-		top: 10%;
 		transform: translateX(-50%);
 	}
 	.timeline-roadmap-container .row {
@@ -96,6 +95,12 @@ let { futureTimelineElements } = Astro.props;
 		top: 28px;
 		transform: rotate(45deg);
 	}
+	.timeline-roadmap-container .row section.future{
+		background: var(--theme-code-bg);
+	}
+	.timeline-roadmap-container .row section.future::before{
+		background: var(--theme-code-bg);
+	}
 	.row-1 section::before {
 		right: -7px;
 	}
@@ -116,9 +121,9 @@ let { futureTimelineElements } = Astro.props;
 		font-size: 17px;
 		box-shadow: 0 0 0 4px var(--theme-text-accent); inset 0 2px 0 rgba(0, 0, 0, 0.08),
 			0 3px 0 4px rgba(0, 0, 0, 0.05);
-
-		/* background-color: var(--theme-code-bg) !important;
-		box-shadow: 0 0 var(--theme-glow-blur) var(--theme-glow-diffuse); */
+	}
+	.row section.past .icon{
+		background: var(--theme-code-ins-border);
 	}
 	.center-line .scroll-icon {
 		bottom: 0px;
@@ -136,6 +141,7 @@ let { futureTimelineElements } = Astro.props;
 	}
 	.row section .details {
 		display: flex;
+		gap: 10px;
 		align-items: center;
 		justify-content: space-between;
 		flex-direction: column;
@@ -149,6 +155,7 @@ let { futureTimelineElements } = Astro.props;
 		margin: 10px 0 17px 0;
 		text-align: center;
 	}
+
 	@media (max-width: 790px) {
 		.timeline-roadmap-container .center-line {
 			left: 40px;
