--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -5,15 +5,39 @@ import PageTimelineRoadmap from "../../../components/PageContent/PageTimelineRoa
 
 export let futureRoadmapElements = [
 	{
-		titleText: "Healer Skill Set",
+		titleText: "Code Refactor",
 		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.06.2023",
+		dateText: "10.05.2023",
 	},
 	{
 		titleText: "Code Refactor",
 		descText: "How the static game data is stored and retrieved by the game",
 		dateText: "10.05.2023",
-	}
+	},	{
+		titleText: "Code Refactor",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.05.2023",
+	},	{
+		titleText: "Code Refactor",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.05.2023",
+	},	{
+		titleText: "Code Refactor",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.05.2023",
+	},	{
+		titleText: "Code Refactor",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.05.2023",
+	},	{
+		titleText: "Code Refactor",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.05.2023",
+	},	{
+		titleText: "Code Refactor",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.05.2023",
+	},
 ];
 ---
 
