JSON File Starting For Skill Structure

--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -10,31 +10,7 @@ export let futureRoadmapElements = [
 		dateText: "10.05.2023",
 	},
 	{
-		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},	{
-		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},	{
-		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},	{
-		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},	{
-		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},	{
-		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},	{
-		titleText: "Code Refactor",
+		titleText: "Origin & Class",
 		descText: "How the static game data is stored and retrieved by the game",
 		dateText: "10.05.2023",
 	},
