--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -6,12 +6,8 @@ import PageTimelineRoadmap from "../../../components/PageContent/PageTimelineRoa
 export let futureRoadmapElements = [
 	{
 		titleText: "Code Refactor",
-		descText: "How the static game data is stored and retrieved by the game",
-		dateText: "10.05.2023",
-	},
-	{
-		titleText: "Origin & Class",
-		descText: "How the static game data is stored and retrieved by the game",
+		descText:
+			"How the static game data is stored and retrieved by the game",
 		dateText: "10.05.2023",
 	},
 ];
