Static File Endpoints - API Route

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,13 @@ import VisualBackground from "../layouts/VisualBackground.astro";
   <div class="profile_banner_container">
     <img
       class="profile_banner_background"
-      src="./aurora@3x.png"
+      src="./image/aurora@3x.png"
       draggable="false"
       inputmode="none"
     />
     <img
       class="profile_banner"
-      src="./LogoSmall.png"
+      src="./image/LogoSmall.png"
       draggable="false"
       inputmode="none"
     />
