--- a/src/pages/wild-chess-simulator/introduction/roadmap.astro
+++ b/src/pages/wild-chess-simulator/introduction/roadmap.astro
@@ -10,6 +10,12 @@ export let futureRoadmapElements = [
 			"How the static game data is stored and retrieved by the game",
 		dateText: "10.05.2023",
 	},
+	{
+		titleText: "Descriptive Analytics",
+		descText:
+			"Visualize and summarize the static data structure that will initialize the game",
+		dateText: "20.06.2023",
+	},
 ];
 ---
 
